added a read me

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=LAPTOP-FUBOTLVE;Server=LAPTOP-FUBOTLVE;Database=Evaluation;User Id=sa;Password=SecureLink6789*;MultipleActiveResultSets=true;Encrypt=False",
+    "DefaultConnection": "Server=SERVER-NAME;Server=SERVER-NAME;Database=Evaluation;User Id=sa;Password=PASSWORD;MultipleActiveResultSets=true;Encrypt=False",
     //Hosting
     "HostingConnection": ""
   },
@@ -10,10 +10,6 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "JWT": {
-    "ValidIssuer": "https://localhost:7185",
-    "ValidAudience": "https://localhost:7185", //"User",
-    "Secret": "thiSis67n@Mysec09reTvalu&es"
-  },
+  
   "AllowedHosts": "*"
 }
